NEWS for the QuakeForge project
-------------------------------

22 Jan 2000 - changes to command line option -game
	You may now specify multiple game directories with -game.  If for
	example you wanted to use the original registered game with MegaTF
	on a new style binary you would use -game id1,megatf.  It does work
	with traditional style binaries and you may specify as many dirs as
	you like seperated by commas.
	
	One caveat:  Most mods were designed to be the only one in use, it
	may be a Bad Thing to mix certain mods with other mods.

19 Jan 2000 - changes to cvar r_fog
	Fog color is once again white.  The r_fog cvar is now a control for
	the fog density rather than a simple toggle control.  Eric Windisch
	recommends setting r_fog to .0005 if you're going to use it.

19 Jan 2000 - removed cvar r_mirroralpha
	This was a cheap hack which affected one texture on one map of the
	entire game.  It also wasn't working right, so it's been removed.

19 Jan 2000 - time cheats revisited
	The final word in detecting time/speed cheating is here at long
	last!  Still catches an occasional person who is "not cheating", but
	as it turns out when it does catch such a person they technically
	are cheating.

	This seems to be caused by dodgy cmos clocks used in many machines
	on the market.  If the server occasionally claims you seem to be
	cheating, try installing some sort of ntp program to synchronize
	your clock periodically against a time server.  If this does not
	seem to fix the problem, we'd like to know about it.

18 Jan 2000 - cvar show_fps
	show_fps 1 now works in uquake as well as qw-client.  No more need
	to use timedemo to check performance!  Much more accurate in showing
	where performance is good and where it isn't.

16 Jan 2000 - new ./configure option:  --enable-newstyle
	Use this option when you run ./configure if you wish to use a few
	QuakeForge defaults which are a bit different than Id Software used,
	but do not change the gameplay.
