@@ -23,6 +23,6 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #ifndef _CVARS_H
 #define _CVARS_H
 
-extert cvar_t gl_flashblend;
+extern cvar_t gl_flashblend;
 
 #endif _CVARS_H
